style.css
/* ... */
@media screen and (max-width: 1024px) {
.container-top {
    display: flex;
    justify-content: left;
    height: 6%;
}

.logo-container-stackoverflow {
    padding-top: 20%;
}

.logo-container-google {
    width: 33%;
    height: 38px;
    margin-left: 33.5%;
    margin-right: 33.5%;
    margin-bottom: 1%;
}

.logo-container-facebook {
    width: 33%;
    height: 38px;
    margin-left: 33.5%;
    margin-right: 33.5%;
    margin-bottom: 2%;
}

.logo-container-github {
    width: 33%;
    height: 38px;
    margin-left: 33.5%;
    margin-right: 33.5%;
    margin-bottom: 1%;
}

.container-username {
    width: 33%;
    margin-left: 33.5%;
    margin-right: 33.5%;
    margin-bottom: 3.25%;
    height: 30vh;
}

.container-bottom {
    height: 2.25%;
}

.search-bar {
    margin-top: 1.5%;
    width: 53%;
}

.logo-menu {
    padding-left: 1.5%;
    padding-top: 1.5%;
}

.logo-stack {
    padding-right: .5%;
}

.logo-facebook {
    padding-top: 5%;
}

.go-to-icon {
    padding-top: 2%;
    padding-left: .75%;
}

.logo-name {
    font-size: 18px;
    margin-top: 1.75%;
}

.logo-name2 {
    font-size: 18px;
    margin-top: 1.75%;
}

.sign-in-text-title-username {
    font-size: 16px;
    font-weight: 600;
}

.sign-in-text-title-password {
    font-size: 16px;
    font-weight: 600;
}

.sign-in-text-password {
    font-size: 12px;
    padding-left: 25%;
}

.login-text {
    margin-top: 3%;
}

}





@media (max-width: 768px) {
.container-top {
    height: 8%;
}

.logo-container-stackoverflow {
    padding-top: 5%;
    padding-bottom: 3%;
}

.logo-container-google {
    width: 36%;
    height: 38px;
    margin-left: 32%;
    margin-right: 32%;
    margin-bottom: 1%;
}

.logo-container-facebook {
    width: 36%;
    height: 38px;
    margin-left: 32%;
    margin-right: 32%;
    margin-bottom: 2%;
}

.logo-container-github {
    width: 36%;
    height: 38px;
    margin-left: 32%;
    margin-right: 32%;
    margin-bottom: 1%;
}

.container-username {
    width: 36%;
    margin-left: 32%;
    margin-right: 32%;
    margin-bottom: 3.25%;
    height: 40vh;
}

.container-bottom {
    padding-top: 0;
}

.container-bottom2 {
    height: 8%;
}

.logo-menu {
    padding-left: 2%;
    padding-top: 2.25%;
}

.logo-facebook {
    padding-top: 5.5%;
}

.go-to-icon {
    padding-top: 1.75%;
    padding-left: .5%;
}

.top-items {
    display: none;
}

.top-items-fix {
    display: none;
}

.top-items-products {
    font-size: 13px;
}

.search-bar {
    padding-left: .25%;
    margin-top: 1.5%;
    width: 59%;
}

.logo-name {
    font-size: 19px;
    margin-top: 1.5%;
}

.logo-name2 {
    font-size: 19px;
    margin-top: 1.5%;
}

.sign-in-text-title-username {
    font-size: 15px;
    font-weight: 600;
}

.sign-in-text-title-password {
    font-size: 15px;
    font-weight: 600;
}

.sign-in-text-password {
    font-size: 13px;
    padding-left: 25%;
}

.login-text {
    font-size: 14px;

}

.bottom-text {
    font-size: 12px;
}

.bottom-text2 {
    font-size: 12px;
}

.sign-up-text {
    font-size: 12px;
    padding-left: 1%;
}

.sign-up-text2 {
    font-size: 12px;
    padding-left: 1.5%;
}
}





@media (max-width: 600px) {

.container-top {
    height: 11%;
}

.logo-container-stackoverflow {
    padding-top: 10%;
    padding-bottom: 5%;
}

.logo-container-google {
    width: 80%;
    height: 40px;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 2%;
}

.logo-container-facebook {
    width: 80%;
    height: 40px;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 4%;
}

.logo-container-github {
    width: 80%;
    height: 40px;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 2%;
}

.container-username {
    width: 80%;
    margin-left: 10%;
    margin-right: 10%;
    margin-bottom: 5.75%;
    height: 50vh;
}

.container-bottom {
    padding-top: 0;
}

.container-bottom2 {
    height: 8%;
}

.logo-name {
    display: none;
}

.logo-name2 {
    display: none;
}

.logo-menu {
    padding-left: 3%;
    padding-top: 4%;
}

.logo-stack {
    padding-top: 3%;
    padding-left: 4%;
}

.logo-facebook {
    padding-top: 5.5%;
}

.search-icon {
    padding-top: 4%;
    padding-right: 2%;
}

.go-to-icon {
    display: none;
}

.top-items {
    display: none;
}

.top-items-fix {
    display: none;
}

.top-items-products {
    font-size: 10px;
    padding-top: 2.8%;
    padding-left: 4%;
}

.search-bar {
    display: flex;
    justify-content: right;
    border: none;
    padding-left: 5%;
}

.search-text {
    display: none;
}

.sign-in-text-title-username {
    font-size: 12px;
}

.sign-in-text-title-password {
    font-size: 12px;
}

.sign-in-text-password {
    font-size: 11px;
    padding-left: 25%;
}

.login-text {
    padding-top: 3%;
    margin: 0;
}

.bottom-text {
    font-size: 12px;
}

.bottom-text2 {
    font-size: 12px;
}

.sign-up-text {
    font-size: 12px;
    padding-left: 1%;
}

.sign-up-text2 {
    font-size: 12px;
    padding-left: 1.5%;
}

}

